ADTS-33 fixed z-index for multiline component

--- a/client/src/components/QueryComponent/QueryComponent.scss
+++ b/client/src/components/QueryComponent/QueryComponent.scss
@@ -284,7 +284,7 @@
 
 .ms-TextField--multiline
 .ms-TextField-wrapper {
-  z-index: 2;
+  z-index: 101;
   position: fixed;
   height: auto;
   margin-top: 32px;
